add into changelog migration files change exception handler, get all albums endpoint